--- a/web/app/components/explore/app-list/style.module.css
+++ b/web/app/components/explore/app-list/style.module.css
@@ -27,3 +27,59 @@
     grid-template-columns: repeat(2, minmax(0, 1fr))
   }
 }
+.hoveritem-lg:hover{
+  box-sizing: border-box;
+  border: 1px solid rgb(141, 181, 248);
+  /* border-radius: 6px; */
+  box-shadow: 0px 20px 40px 0px rgba(63, 153, 255, 0.3);
+  background: rgb(255, 255, 255);
+}
+.h248{
+  height: 248px;
+}
+
+.positionRE{
+  position: relative;
+  left: 48px;
+  height: 52px;
+}
+.rounded-tw{
+  border-radius: 6px;
+  box-shadow: 0px 20px 40px 0px rgba(182, 204, 228, 0.3);
+}
+.boxTab{
+  position: absolute;
+  left: 10px;
+  top: 24px;
+  z-index: 10;
+}
+.boxShadowTw{
+  position: absolute;
+  z-index: 1;
+  top: 14px;
+  width: 780px;
+  height: 50px;
+  box-sizing: border-box;
+  border: 2px solid rgb(255, 255, 255);
+  border-radius: 6px;
+  box-shadow: 0px 0px 20px 0px rgba(0, 112, 255, 0.2);
+  background: rgba(255, 255, 255, 0.3);
+}
+
+.text-20px {
+  font-size: 20px;
+}
+.marg-b12{
+  margin-bottom: 12px;
+}
+.h100{
+  height: 100%;
+}
+.h78{
+  height: 78px;
+}
+.chose-tw{
+  box-shadow: 0px 4px 20px 0px rgba(0, 112, 255, 0.4);
+  background: rgb(0, 112, 255);
+  color: #fff;
+}
